[gd_scene load_steps=4 format=3 uid="uid://ck0h6u5611vuw"]

[ext_resource type="Script" uid="uid://mc4toxxwwwcj" path="res://Scripts/sell_item_interface.gd" id="1_uw2l5"]
[ext_resource type="PackedScene" uid="uid://ew425eutsfhw" path="res://Scenes/item_slot.tscn" id="2_y668u"]
[ext_resource type="StyleBox" uid="uid://h763tmt77xw7" path="res://Resources/trade_item_interface.tres" id="3_gbqxf"]

[node name="SellItemInterface" type="CanvasLayer"]
script = ExtResource("1_uw2l5")
singular_slot = ExtResource("2_y668u")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(700, 400)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_gbqxf")

[node name="GridContainer" type="GridContainer" parent="Panel"]
custom_minimum_size = Vector2(330, 380)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -190.0
offset_right = 340.0
offset_bottom = 190.0
grow_vertical = 2
columns = 5

[node name="TradeContainer" type="VBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(330, 380)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -340.0
offset_top = -190.0
offset_right = -10.0
offset_bottom = 190.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="InitialLabel" type="Label" parent="Panel/TradeContainer"]
layout_mode = 2
text = "TEXT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/TradeContainer"]
layout_mode = 2
alignment = 1

[node name="ItemSlot" parent="Panel/TradeContainer/HBoxContainer" instance=ExtResource("2_y668u")]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="Panel/TradeContainer"]
layout_mode = 2
text = "TEXT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PriceLabel" type="Label" parent="Panel/TradeContainer"]
layout_mode = 2
text = "TEXT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrentBalance" type="Label" parent="Panel/TradeContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="SellButton" type="Button" parent="Panel/TradeContainer"]
visible = false
layout_mode = 2
text = "SELL"

[connection signal="pressed" from="Panel/TradeContainer/SellButton" to="." method="_on_sell_button_pressed"]
